Fix code block titles & copy btn alignment

--- a/style.css
+++ b/style.css
@@ -1017,8 +1017,8 @@
   .copyButton {
     background: var(--bgColor-muted, var(--color-canvas-subtle));
     @apply text-foreground-secondary transition-all duration-100
-      absolute z-10 px-2 py-1 rounded-sm border
-      -top-4 sm:right-2 right-0 border-foreground-tertiary cursor-pointer;
+      absolute z-10 px-2 py-1 rounded-xs border
+      top-1 -right-3 sm:right-1 border-foreground-tertiary cursor-pointer;
 
     &:hover,
     &:focus {
@@ -1037,7 +1037,7 @@
   .markdownBlockTitle {
     background: var(--bgColor-muted, var(--color-canvas-subtle));
     @apply px-2 py-1.5 leading-none rounded-sm border text-xs font-semibold z-10
-      relative w-max -mb-4! text-foreground-primary sm:left-2 top-2
+      relative w-max -mb-4! text-foreground-primary sm:left-2 top-3.5
       border-foreground-tertiary;
   }
 
